# gtg

./: README.md  pyproject.toml
src/gtg/: __init__.py  _geometry_core.py  geometry.py  graph.py  visualisation.py
