[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtg"
version = "0.1.0"
description = "Shared utilities for my DS projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy", "pandas", "geopandas", "shapely",  # whatever you actually use
]

# Tell hatchling where your packages live (src/ layout)
[tool.hatch.build.targets.wheel]
packages = ["src/gtg"]